--- a/CTF_WEB_FACILE/src/docker-compose.yml
+++ b/CTF_WEB_FACILE/src/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       MYSQL_ROOT_PASSWORD: "super-secret-password"
       MYSQL_DATABASE: "my-wonderful-website"
     volumes:
-      - dbData:/var/lib/mysql
+      - /var/:/var/lib/mysql
 volumes:
   app:
   dbData:
