--- a/CTF_WEB_FACILE/src/docker-compose.yml
+++ b/CTF_WEB_FACILE/src/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     volumes:
       - ./app:/var/www/html
   mysql:
+    restart: always
     ports:
       - "3306:3306"
     build: './build/mysql'
@@ -14,7 +15,7 @@ services:
       MYSQL_ROOT_PASSWORD: "super-secret-password"
       MYSQL_DATABASE: "my-wonderful-website"
     volumes:
-      - /var/:/var/lib/mysql
+      - bdd:/var/lib/mysql
 volumes:
   app:
-  dbData:
+  bdd:
