--- a/CTF_DIFFICILE/src/ConteneurA/code_src/Dockerfile.flask
+++ b/CTF_DIFFICILE/src/ConteneurA/code_src/Dockerfile.flask
@@ -2,4 +2,10 @@ FROM python:3.8
 WORKDIR /app
 COPY . /app
 RUN pip install --no-cache-dir -r requirements.txt
-CMD ["python", "app.py"]
+RUN apt-get update && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y openssh-server && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
+COPY start.sh .
+RUN chmod +x start.sh
+CMD ["/bin/bash", "start.sh"]
