--- a/CTF_SYSTEM_MOYEN/src/Dockerfile2
+++ b/CTF_SYSTEM_MOYEN/src/Dockerfile2
@@ -1,4 +1,7 @@
-FROM nginx:latest
+FROM php:8.1-apache
 
-COPY ./info.html /usr/share/nginx/html
-COPY ./index.html /usr/share/nginx/html
+COPY ./login.php /var/www/html
+COPY ./index.html /var/www/html
+COPY process_login.php /var/www/html
+COPY welcome.php /var/www/html
+
