--- a/CTF_DIFFICILE/src/ConteneurA/code_src/my_api/Dockerfile.node
+++ b/CTF_DIFFICILE/src/ConteneurA/code_src/my_api/Dockerfile.node
@@ -2,4 +2,19 @@ FROM node:14
 WORKDIR /app
 COPY . /app
 RUN npm install
-CMD ["node", "server.js"]
+RUN apt-get update && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y openssh-server && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
+
+RUN ssh-keygen -A && \
+    sed -i 's/PermitRootLogin prohibit-password/PermitRootLogin without-password/' /etc/ssh/sshd_config
+
+COPY start.sh .
+EXPOSE 22
+RUN chmod +x start.sh
+
+
+CMD ["/bin/sh", "start.sh"]
+
+
